<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/loginLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:text=""
            android:hint="@string/hint_create_tips"
            android:maxLength="50"
            />

        <Button
            android:layout_marginStart="15dp"
            android:id="@+id/btnGO"
            android:text="@string/btn_create"
            android:layout_width="100dp"
            android:layout_height="50dp"/>
    </LinearLayout>

    <LinearLayout
        android:visibility="invisible"
        android:id="@+id/inLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <EditText

            android:layout_weight="0.99"
            android:id="@+id/editInfo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:ems="10"
            android:hint="@string/hint_save_info"

            android:singleLine="false"
            android:inputType="textMultiLine"
            android:scrollHorizontally="false"
            android:gravity="top|start"

            />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>